--- a/random-password/index.html
+++ b/random-password/index.html
@@ -19,28 +19,7 @@
                 onclick="copyPassword()">Copy</a></th>
         </table>
     </div>
-    
+    <script src="./random.js"></script>
 </body>
-<script src="" type="text/javascript">
-    var password = document.getElementById('password')
-    function genPassword() {
-        var chars =
-        '0123456789abcdefghiklmnoprstuvwxyz!@#$%^&*()ABCDEFGHIJKLMNOPQRSTUVWXYZ'
-        var passwordLength =12
-        var password= ''
-        for (var i=0; i < passwordLength; i++){
-            var randomNumber = Math.floor(Math.random() * chars.length)
-            password+= chars.substring(randomNumber,randomNumber+1)
 
-
-        }
-        document.getElementById('password').value=password
-    }
-    function copyPassword(){
-        var copyText =document.getElementById('password')
-        copyText.select()
-        copyText.setSelectionRange(0,999)
-        document.execCommand('copy')
-    }
-</script>
 </html>
