stili duzelt yorum ekle

--- a/word-count/index.html
+++ b/word-count/index.html
@@ -9,12 +9,12 @@
 </head>
 <body>
     <main>
-        <textarea name="" id="" cols="30" rows="10">
+        <textarea name="" class="text" cols="30" rows="10"></textarea>
             <div class="boxes">
                 <p class="words box" data-text="words">1</p>
                 <p class="characters box" data-text="characters">2</p>
             </div>
-        </textarea>
+    
     </main>
 </body>
 <script src="./word.js"></script>
