--- a/word-count/index.html
+++ b/word-count/index.html
@@ -10,9 +10,14 @@
 <body>
     <main>
         <textarea name="" class="text" cols="30" rows="10"></textarea>
+        <!-- <textarea> elementi HTML'de bir form elemanıdır ve kullanıcının metin girebileceği bir alan oluşturur. "name" attribute, alanın formda nasıl tanımlanacağını belirtir ve "class" attribute süslü parantezler içinde belirtilen CSS sınıflarını uygular. "cols" ve "rows" attribute'leri alanın genişliğini ve yüksekliğini belirtir. Örnek olarak, <textarea name="comments" class="text" cols="30" rows="10"></textarea> kullanıcının yazabileceği genişliği 30 karakter ve yüksekliği 10 satır olan bir metin alanı oluşturur. -->
             <div class="boxes">
                 <p class="words box" data-text="words">1</p>
                 <p class="characters box" data-text="characters">2</p>
+                <!-- "data-*" attribute'leri, HTML elementlerine özel veri eklemek için kullanılır. "data-text" attribute'i özel olarak tanımlanmış bir metin verisi içerir. Bu veri, JavaScript ile erişilerek veya CSS ile stil uygulanarak kullanılabilir. Örnek olarak, <p data-text="example">This is a paragraph</p> bu paragrafın data-text attribute'i "example" değerini içerir. Bu değer JavaScript ile alınıp işlenebilir veya CSS ile stil uygulanabilir. -->
+
+
+
             </div>
     
     </main>
