--- a/animated clock/index.html
+++ b/animated clock/index.html
@@ -14,8 +14,14 @@
             <span style="--i:1"><b>3</b></span>
             <span style="--i:2"><b>6</b></span>
             <span style="--i:3"><b>9</b></span>
+            <div class="circle" id="hr"><i></i></div>
+            <div class="circle" id="mn"><i></i></div>
+            <div class="circle" id="sc"><i></i></div>
+            
+            </div>
         </div>
 
     </div>
+    <script src="./clock.js"></script>
 </body>
 </html>
