style i kontrol et

--- a/voice to text/index.html
+++ b/voice to text/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <main>
-        <textarea name="" class="text"  id="" cols="30" rows="10"></textarea>
+        <textarea name="" class="text"   cols="30" rows="10"></textarea>
         <button class="btn">
             <i class="fa-solid fa-microphone mic"></i>
         </button>
